--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,6 @@ go:
 
 before_script:
     - sudo apt install python2.7
-    - wget http://prdownloads.sourceforge.net/ta-lib/ta-lib-0.4.0-src.tar.gz && sudo tar -xzf ta-lib-0.4.0-src.tar.gz && sudo rm ta-lib-0.4.0-src.tar.gz && cd ta-lib/ && sudo ./configure --prefix=/usr  && sudo make && sudo make install && cd ~ && sudo rm -rf ta-lib/ && pip install ta-lib
 
 script:
-    - go test -v ./...
+    - ls -a && go test -v ./...
